css/main.css
/* ... */
.color_blacksteel{
	background: rgb(135,135,135); /* Old browsers */
	background: -moz-linear-gradient(top,  rgba(135,135,135,1) 0%, rgba(96,96,96,1) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(135,135,135,1)), color-stop(100%,rgba(96,96,96,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  rgba(135,135,135,1) 0%,rgba(96,96,96,1) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  rgba(135,135,135,1) 0%,rgba(96,96,96,1) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  rgba(135,135,135,1) 0%,rgba(96,96,96,1) 100%); /* IE10+ */
	background: linear-gradient(top,  rgba(135,135,135,1) 0%,rgba(96,96,96,1) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#878787', endColorstr='#606060',GradientType=0 ); /* IE6-9 */
}
.color_blue{
	background: rgb(36,129,201); /* Old browsers */
	background: -moz-linear-gradient(top,  rgba(36,129,201,1) 0%, rgba(24,71,124,1) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(36,129,201,1)), color-stop(100%,rgba(24,71,124,1))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* IE10+ */
	background: linear-gradient(top,  rgba(36,129,201,1) 0%,rgba(24,71,124,1) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2481c9', endColorstr='#18477c',GradientType=0 ); /* IE6-9 */

}
input.input_text_small{width: 75px;}
input.input_text_medium{width: 150px;}
input.input_text_large{width: 250px;}
input.input_submit_small{padding:7px;}
input.input_submit_medium{padding:15px;}
input.input_submit_large{padding:22px;}
.display_block{display:block;}
.display_inlineblock{display:inline-block;}
.display_none{display:none;}

.border_all{border:1px solid #000;}
.border_top{border-top:1px solid #000;}
.border_bottom{border-bottom:1px solid #000;}
.border_right{border-right:1px solid #000;}
.border_left{border-left:1px solid #000;}

.border_all_dashed{border:1px dashed #000;}
.border_top_dashed{border-top:1px dashed #000;}
.border_bottom_dashed{border-bottom:1px dashed #000;}
.border_right_dashed{border-right:1px dashed #000;}
.border_left_dashed{border-left:1px dashed #000;}

.link_active{text-decoration:underline;}
.text_underline{text-decoration:underline;}

.float_right{float:right;}
.float_left{float:left;}
.float_center{float:center;}


.main_wrapper{}
.main_container{width:900px;margin:20px auto;}
.block_raw{width:100%;}
.block_column_50{display:inline-block;width:49%;vertical-align:top;}
.block_column_30{display:inline-block;width:29%;vertical-align:top;}
.block_column_70{display:inline-block;width:69%;vertical-align:top;}

#body_header{
	width:100%;
	height:80px;
	margin:0px 0px 5px;
}
	#obj_logo{
		width:365px;
		height:80px;
		float:left;
		background:url(../imgs/logo-crystal.png);
	}
	#obj_user_login{
		width:350px;
		height:80px;
		float:right;
	}
#body_navbar{
	width:100%;
	height:50px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	box-shadow:0px 2px 5px #000;
}
	#obj_menu{
		list-style:none;
		direction:rtl;
	}
		#obj_menu li{
			float:right;
		}
		#obj_menu li a{
			display:block;
			height:50px;
			width:auto;
			padding:0px 22px 0px 22px;
			line-height:50px;
			font-size:14pt;
			text-decoration:none;
			border-left:1px solid #333;
			color:#FFF;
		}
		#obj_menu li a:hover{
			background: rgb(91,152,198); /* Old browsers */
			background: -moz-linear-gradient(top,  rgba(91,152,198,1) 0%, rgba(38,113,193,1) 100%); /* FF3.6+ */
			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(91,152,198,1)), color-stop(100%,rgba(38,113,193,1))); /* Chrome,Safari4+ */
			background: -webkit-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Chrome10+,Safari5.1+ */
			background: -o-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* Opera 11.10+ */
			background: -ms-linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* IE10+ */
			background: linear-gradient(top,  rgba(91,152,198,1) 0%,rgba(38,113,193,1) 100%); /* W3C */
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b98c6', endColorstr='#2671c1',GradientType=0 ); /* IE6-9 */

		}
		#obj_menu li a.active{
			
		}
		#obj_menu li a.first{
			padding-right:25px;
			-webkit-border-top-right-radius: 5px;
			-webkit-border-bottom-right-radius: 5px;
			-moz-border-radius-topright: 5px;
			-moz-border-radius-bottomright: 5px;
			border-top-right-radius: 5px;
			border-bottom-right-radius: 5px;
		}
#body_content{
	width:100%;
	margin-top:10px;
	padding:5px 0px 25px 0px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	box-shadow:0px 2px 5px #000;
	background: #e8e8e8; /* Old browsers */
	background: -moz-linear-gradient(top, #e8e8e8 0%, #b7b7b7 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e8e8e8), color-stop(100%,#b7b7b7)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* IE10+ */
	background: linear-gradient(top, #e8e8e8 0%,#b7b7b7 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#b7b7b7',GradientType=0 ); /* IE6-9 */
}
    #navigation {
        margin: 2px 8px 5px;
    }
    
#body_footer{
	width:100%;
	padding:10px;
	text-align:center;
}
#obj_iconlist{
	width:100%;
	list-style:none;
}
/* ... */

